--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/yuansushow/redis-example#readme",
   "dependencies": {
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "@types/node": "^10.12.15",
-    "@types/redis": "^2.8.8"
+    "@types/redis": "^2.8.8",
+    "@types/ws": "^6.0.1"
   }
 }
